# python-project-template

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-python.yml  codeql-analysis-python.yml  deploy-pypi.yml  release-pontos.yml
example/: main.py
