[tool.poetry]
name = "<FIXME>"
version = "0.1.0"
description = "A GitHub Template for Python Projects"
authors = ["Greenbone <info@greenbone.net>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

classifiers=[
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",  # pylint: disable=line-too-long
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "<FIXME>"},
  { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7.2"

[tool.poetry.dev-dependencies]
pontos = ">=22.10.0"
autohooks = ">=22.8.0"
autohooks-plugin-black = ">=22.8.0"
autohooks-plugin-pylint = ">=22.8.0"
autohooks-plugin-isort = ">=22.8.0"
coverage = "^7.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py37", "py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black",  "autohooks.plugins.isort", "autohooks.plugins.pylint"]

[tool.pontos.version]
version-module-file = "<FIXME>/__version__.py"

[tool.isort]
profile = "black"
line_length = 80

[tool.poetry.scripts]
FIXME = '<FIXME>:main'
